--- a/pkg/ca/gui/templates/generate.html
+++ b/pkg/ca/gui/templates/generate.html
@@ -1,4 +1,4 @@
-{{define "content"}}
+{{define "generate-content"}}
 <div class="panel">
     <h3>CERTIFICATE GENERATION</h3>
     <p style="color: #66ff66; margin-bottom: 15px; font-size: 10px;">
